--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /venv/
 /test_01.py
 /test_02.py
+/test_03.py
 #/.idea/inspectionProfiles/profiles_settings.xml
 #/.idea/modules.xml
 #/.idea/Good, good Python [S. Balakirev].iml
